# ppoppo-accounts

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  LICENSE-APACHE  LICENSE-MIT  README.md  clippy.toml
.0context/: LIST_FUNCTIONS_PPOPPO_ACCOUNTS.md
docs/plans/: 2026-02-20-architecture-improvements-design.md  2026-02-20-architecture-improvements-impl-plan.md
src/: error.rs  lib.rs  oauth.rs  pkce.rs  ppnum.rs  token.rs  types.rs  well_known.rs
src/middleware/: config.rs  cookies.rs  error.rs  extractor.rs  mod.rs  routes.rs  state.rs  traits.rs  types.rs
