[package]
name = "ppoppo-accounts"
version = "0.2.1"
edition = "2024"
rust-version = "1.85"
license = "MIT OR Apache-2.0"
description = "OAuth2 PKCE client, PASETO v4.public verification, and Axum auth middleware for Ppoppo Accounts System (PAS)"
repository = "https://github.com/hakchin/ppoppo-accounts"
homepage = "https://accounts.ppoppo.com"
documentation = "https://docs.rs/ppoppo-accounts"
keywords = ["oauth2", "pkce", "paseto", "authentication"]
categories = ["authentication", "web-programming"]

[features]
default = ["oauth", "token"]
oauth = ["dep:reqwest", "dep:sha2", "dep:rand", "dep:urlencoding", "dep:base64"]
token = ["dep:pasetors", "dep:hex", "dep:base64"]
axum = ["oauth", "dep:axum", "dep:axum-extra", "dep:tracing", "dep:time"]

[dependencies]
# Token verification
pasetors = { version = "0.7", default-features = false, features = ["v4", "std"], optional = true }
hex = { version = "0.4", optional = true }

# OAuth2 HTTP client
reqwest = { version = "0.13", default-features = false, features = ["json", "form", "rustls", "webpki-roots"], optional = true }

# PKCE
sha2 = { version = "0.10", optional = true }
base64 = { version = "0.22", optional = true }
rand = { version = "0.9", optional = true }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# URL encoding (shared by oauth + axum)
urlencoding = { version = "2", optional = true }

# Error handling
thiserror = "2"

# Axum middleware (feature = "axum")
axum = { version = "0.8", optional = true }
axum-extra = { version = "0.12", features = ["cookie-private"], optional = true }
tracing = { version = "0.1", optional = true }
time = { version = "0.3", optional = true }
